ファーストビューの実装

--- a/assets/styles/_constants.sass
+++ b/assets/styles/_constants.sass
@@ -10,4 +10,6 @@ $sat-blue: #6DAAFF
 $sun-red: #FF7B7B
 $dark: #272727
 
+$accent-family: 'Sawarabi Mincho', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif
+
 $block-padding: 13px 20px
