--- a/assets/styles/_constants.sass
+++ b/assets/styles/_constants.sass
@@ -1,6 +1,6 @@
 $black: black
 $white: white
-$base: #F0EFED
+$base: #FAF6F1
 $main: #FF9900
 $grey: #E6E6E6
 $red: #FF5B5B
@@ -10,6 +10,6 @@ $sat-blue: #6DAAFF
 $sun-red: #FF7B7B
 $dark: #272727
 
-$accent-family: 'Sawarabi Mincho', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif
+$accent-family: 'Noto Sans JP', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif
 
 $block-padding: 13px 20px
