--- a/assets/styles/_base.sass
+++ b/assets/styles/_base.sass
@@ -1,21 +1,37 @@
-<template lang="pug">
-NuxtLayout
-  NuxtPage
-</template>
+@mixin calc-cell($cell-number)
+  & > *
+    width: calc((100% / $cell-number) - ($cell-margin * ($cell-number - 1) / $cell-number))
+    margin-right: $cell-margin
+    &:nth-child(#{$cell-number}n)
+      margin-right: 0
 
-<style lang="sass">
 body
   font-family: 'Sawarabi Mincho', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif
 .section
   padding: 30px 0
+.container
+  padding: 0 20px
+  @include pc
+    width: 100%
+    max-width: $pc
+    padding: 0
+    margin: 0 auto
+.cell-pc
+  @include pc
+    margin: 0 auto
+    display: flex
+    align-items: stretch
+    flex-wrap: wrap
+    &.cell-2
+      @include calc-cell($cell-number: 2)
+    &.cell-3
+      @include calc-cell($cell-number: 3)
 .t-center
   text-align: center
 .eyecatch
   width: 100%
   aspect-ratio: 16/9
   background-color: $grey
-  object-fit: cover
-  object-position: center
 .bg-base
   background-color: $base
 .bg-dark
@@ -49,4 +65,3 @@ body
   margin-bottom: 30px
 .mb-4
   margin-bottom: 40px
-</style>
