--- a/assets/styles/_base.sass
+++ b/assets/styles/_base.sass
@@ -1,9 +1,9 @@
 @mixin calc-cell($cell-number)
   & > *
     width: calc((100% / $cell-number) - ($cell-margin * ($cell-number - 1) / $cell-number))
-    margin-right: $cell-margin
-    &:nth-child(#{$cell-number}n)
-      margin-right: 0
+    margin-left: $cell-margin
+    &:nth-child(#{$cell-number}n - #{$cell-number - 1})
+      margin-left: 0
 
 body
   font-family: 'Sawarabi Mincho', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif
@@ -21,6 +21,7 @@ body
     margin: 0 auto
     display: flex
     align-items: stretch
+    justify-content: center
     flex-wrap: wrap
     &.cell-2
       @include calc-cell($cell-number: 2)
