--- a/assets/styles/_form.sass
+++ b/assets/styles/_form.sass
@@ -1,3 +1,8 @@
+form
+  @include pc
+    width: 100%
+    max-width: 480px
+    margin: 0 auto
 .input-block
   background-color: $white
   padding: $block-padding
